<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="235dp"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:src="@mipmap/createlayouticon" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="項目">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_subtitle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="金額">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </ScrollView>




    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/createlayout_btn_reset"
        style="@style/createlayout_btn_style"
        android:text="@string/reset"/>
    <Button
        android:id="@+id/createlayout_btn_cancel"
        style="@style/createlayout_btn_style"
        android:text="@string/cancel"/>
        <Button
            android:id="@+id/createlayout_btn_submit"
            style="@style/createlayout_btn_style"
            android:text="@string/submit" />

    </LinearLayout>
</LinearLayout>